add other examples